completed first and second

--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,21 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+</head>
+<body>
+    <header class="header"></header>
+    <div class="mid-container">
+        <aside class="aside1"></aside>
+        <div class="center-container">
+            <main class="main"></main>
+            <footer class="footer"></footer>
+        </div>
+        <aside class="aside2"></aside>
+    </div>
+</body>
+</html>
