--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,27 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+</head>
+<body>
+    <header class="header-container">
+        <div class="secondary-container">
+            <div class="purp-square"></div>
+            <div class="green-square"></div>
+            <div class="blue-circ"></div>
+        </div>
+    </header>
+    <main class="main-container">
+        <div class="cream-box"></div>
+    </main>
+    <footer class="footer-container">
+        <div class="footer-shadowed">
+            <p class="footer-text">HELLO<br>FRIENDS</p>
+        </div>
+    </footer>
+</body>
+</html>
